feat: RecyclerView Adapter에서 새로운 Activity 생성 후 이동
Plant Item을 Parcelable로 만들어 새로운 Activity에 전달시킴
Parcelable Data를 통해서 DetailActivtiy 구성할 것

--- a/SmartHydroponicsSystem/app/src/main/res/layout/item_plant.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/layout/item_plant.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/item_card_view"
         android:layout_width="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
