--- a/SmartHydroponicsSystem/app/src/main/res/layout/sensor_status_item.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/layout/sensor_status_item.xml
@@ -50,4 +50,9 @@
             app:layout_constraintRight_toRightOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_addItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </androidx.cardview.widget.CardView>
