--- a/SmartHydroponicsSystem/app/src/main/res/layout/activity_plant_detail.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/layout/activity_plant_detail.xml
@@ -16,29 +16,29 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/plant_name"
+                android:id="@+id/plant_bar_name"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:gravity="center_horizontal"
                 android:textSize="32sp"
                 app:layout_collapseMode="pin"
                 app:title="상추"
-                app:titleTextColor="@color/white" />
+                app:titleTextColor="@color/green" />
 
             <ImageView
                 android:id="@+id/plant_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_launcher_background" />
+                android:background="@drawable/lettuce" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,28 +46,55 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:id="@+id/plant_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="68sp"
-                android:text="1"/>
+                android:gravity="center"
+                android:textStyle="bold"
+                android:text="식물 이름"
+                android:textSize="28sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/plant_tds_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/green"
+                    android:textStyle="bold"
+                    android:text="@string/tds_title"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:gravity="center"
+                    android:id="@+id/plant_tds_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="17.4mg/L ~ 18.2mg/L"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
 
             <TextView
+                android:id="@+id/plant_information"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="68sp"
-                android:text="1234"/>
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="12dp"
+                android:text="정보정보"
+                android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="68sp"
-                android:text="12345"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="68sp"
-                android:text="11111"/>
 
         </LinearLayout>
 
