--- a/SmartHydroponicsSystem/app/src/main/res/layout/activity_main.xml
+++ b/SmartHydroponicsSystem/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_viewPager"
         app:layout_constraintRight_toRightOf="parent">
 
     </com.google.android.material.tabs.TabLayout>
@@ -24,7 +25,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
-
 
     </androidx.viewpager2.widget.ViewPager2>
 
